infra/k8s/mongodb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-srv
spec:
  selector:
    app: mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
